# kova

./: HACKATHON_SUBMISSION.md  README.md  main.py  pyproject.toml
backend/: .env.template  PRD.md  main.py  prompts.py  pyproject.toml
backend/prompts/: chat_bot.py  question_gen.py  scam_detection.py  speaker_identifier.py
backend/routers/: api.py  chat.py  wakeword.py  websocket.py
backend/services/: alert_sender.py  chat_bot.py  deepgram_client.py  question_generator.py  scam_detector.py  session_manager.py  session_state.py  speaker_identifier.py  supabase_client.py  transcript_processor.py  workflow.py
backend/tests/: interactive_chatbot_test.py  test_chatbot.py  test_graph.py  test_rate_limit.py  test_scam_detector.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioVisualizer.tsx  ChatPanel.tsx  PhoneNumberModal.tsx  VoiceActivationListener.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useWakeWord.ts
frontend/src/layouts/: AuthLayout.tsx
frontend/src/lib/: analyticsApi.ts  chatApi.ts
frontend/src/pages/: Account.tsx  ActiveCall.tsx  Analytics.tsx  Dashboard.tsx  Login.tsx  Signup.tsx
frontend/src/types/: database.types.ts  index.ts
